--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main  # 메인 브랜치에 푸시될 때만 실행
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -19,7 +20,8 @@ jobs:
 
       - name: Deploy to Vercel
         if: "contains(github.event.head_commit.message, '[deploy]')"
-        run: npx vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
         env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+        run: npx vercel --token ${VERCEL_TOKEN} --prod --yes
