--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,7 @@ jobs:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-        run: npx vercel --token ${VERCEL_TOKEN} --prod --yes
+        run: |
+          npx vercel --token "$VERCEL_TOKEN" --prod --confirm \
+            --project-id "$VERCEL_PROJECT_ID" \
+            --scope "$VERCEL_ORG_ID"
