--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,21 +3,17 @@ on:
   push:
     branches:
       - main  # 메인 브랜치에 푸시될 때만 실행
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '18'  # 프로젝트에 맞는 Node.js 버전 선택
-
       - name: Install dependencies
         run: npm ci  # 또는 yarn install --frozen-lockfile
-
       - name: Deploy to Vercel
         if: "contains(github.event.head_commit.message, '[deploy]')"
         env:
@@ -25,6 +21,4 @@ jobs:
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
         run: |
-          npx vercel --token "$VERCEL_TOKEN" --prod --confirm \
-            --project-id "$VERCEL_PROJECT_ID" \
-            --scope "$VERCEL_ORG_ID"
+          npx vercel --token ${VERCEL_TOKEN} --prod --confirm
