--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.4",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.56.2",
     "@use-gesture/react": "^10.3.1",
     "next": "14.2.8",
     "next-pwa": "^5.6.0",
