--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.8",
     "next-pwa": "^5.6.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
