--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.1"
+    "react-hook-form": "^7.51.1",
+    "react-kakao-maps-sdk": "^1.1.27"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
