--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,32 +11,50 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/icon/app-icon-84x108.png",
-      "sizes": "84x108",
+      "src": "/icon/app-icon-24x24.png",
+      "sizes": "24x24",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon/app-icon-124x162.png",
-      "sizes": "124x162",
+      "src": "/icon/app-icon-48x48.png",
+      "sizes": "48x48",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon/app-icon-248x323.png",
-      "sizes": "248x323",
+      "src": "/icon/app-icon-72x72.png",
+      "sizes": "72x72",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon/app-icon-329x429.png",
-      "sizes": "329x429",
+      "src": "/icon/app-icon-96x96.png",
+      "sizes": "96x96",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon/app-icon-330x430.png",
-      "sizes": "330x430",
+      "src": "/icon/app-icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon/app-icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon/app-icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon/app-icon-512x512.png",
+      "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
