--- a/.gitignore
+++ b/.gitignore
@@ -20,13 +20,11 @@
 .DS_Store
 *.pem
 
+.idea
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# local env files
-.env*.local
 
 # vercel
 .vercel
