--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.12",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "jest": "^29.7.0",
