--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
-    "react-hook-form": "^7.51.1"
+    "react-hook-form": "^7.51.1",
+    "react-spring": "^9.7.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
