[deploy] login 부분 프론트 완성

--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,4 @@ NEXT_PUBLIC_KAKAO_JS_KEY=d54afc7be6e3a870812726dff0ab312b
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_NAVER_CLIENT_ID=sk76mz4j8d
 NEXT_PUBLIC_NAVER_SECRET_KEY=jaMYyNkUXfDoH8wfyl1j2vwbwa9VvtF7DDc0WxBA
+NEXT_PUBLIC_IMAGE_DOMAIN=https://nnzzimage.s3.ap-northeast-2.amazonaws.com
