--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.56.2",
     "@use-gesture/react": "^10.3.1",
     "next": "14.2.8",
+    "lottie-react": "^2.4.0",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
