--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
     "@use-gesture/react": "^10.3.1",
-    "next": "14.2.8",
+    "html-to-image": "^1.11.11",
     "lottie-react": "^2.4.0",
+    "next": "14.2.8",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
