[deploy] 카테고리에서 추가 제거 해도 전체 라이크 식당 나오던 이슈수정, 마케팅 스크립트 , GA연결

--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,4 @@ NEXT_PUBLIC_NAVER_CLIENT_ID=sk76mz4j8d
 NEXT_PUBLIC_NAVER_SECRET_KEY=jaMYyNkUXfDoH8wfyl1j2vwbwa9VvtF7DDc0WxBA
 NEXT_PUBLIC_IMAGE_DOMAIN=https://nnzzimage.s3.ap-northeast-2.amazonaws.com
 NEXT_PUBLIC_API_BASE_URL=http://13.209.221.99:8080
+NEXT_PUBLIC_GA_ID=G-XH3ZN183NM
