--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/jest": "^29.5.13",
+    "@next/third-parties": "^14.1.4",
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^18",
