--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "jest",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "chromatic --project-token=$NEXT_PUBLIC_CHROMATIC_TOKEN"
   },
   "dependencies": {
     "@react-spring/web": "^9.7.4",
@@ -49,6 +50,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "chromatic": "^11.22.2",
     "daisyui": "^4.12.12",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
