--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "chromatic --project-token=$NEXT_PUBLIC_CHROMATIC_TOKEN"
+    "chromatic": "chromatic"
   },
   "dependencies": {
     "@react-spring/web": "^9.7.4",
@@ -51,6 +51,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "chromatic": "^11.22.2",
+    "cross-env": "^7.0.3",
     "daisyui": "^4.12.12",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
