--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - main
-
 jobs:
   check-commit:
     runs-on: ubuntu-latest
@@ -16,12 +15,13 @@ jobs:
       - id: check-message
         run: |
           message=$(git log -1 --pretty=%B)
-          if [[ $message == *"[StoryBook]"* ]]; then
+          if [[ $message == *"[deploy]"* ]]; then
+            echo "should_run=false" >> $GITHUB_OUTPUT
+          elif [[ $message == *"[StoryBook]"* ]]; then
             echo "should_run=true" >> $GITHUB_OUTPUT
           else
             echo "should_run=false" >> $GITHUB_OUTPUT
           fi
-
   chromatic-deployment:
     needs: check-commit
     if: needs.check-commit.outputs.should_run == 'true'
