--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-spring/web": "^9.7.4",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
+    "@types/html2canvas": "^1.0.0",
     "@use-gesture/react": "^10.3.1",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "lottie-react": "^2.4.0",
     "next": "14.2.8",
     "next-pwa": "^5.6.0",
