[deploy] 블로그 업데이트

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,8 @@
     "plugin:storybook/recommended"
   ],
   "rules": {
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "@next/next/no-img-element": "off"
   }
 }
