--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "lottie-react": "^2.4.0",
     "next": "15.4.7",
     "next-pwa": "^5.6.0",
+    "notion-client": "^7.7.1",
+    "notion-types": "^7.7.1",
+    "notion-utils": "^7.7.1",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.51.1",
+    "react-notion-x": "^7.7.1",
     "react-spring": "^9.7.4"
   },
   "devDependencies": {
@@ -61,6 +65,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "prettier": "^3.6.2",
     "storybook": "^8.4.7",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
