--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.552.0",
     "next": "15.4.7",
     "next-pwa": "^5.6.0",
     "notion-client": "^7.7.1",
