--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: '18'  # 프로젝트에 맞는 Node.js 버전 선택
       - name: Install dependencies
-        run: npm ci  # 또는 yarn install --frozen-lockfile
+        run: npm ci --legacy-peer-deps
       - name: Deploy to Vercel
         if: "contains(github.event.head_commit.message, '[deploy]')"
         env:
