[deploy] QA변경사항 수정(메뉴 카테고리-거리 변경시 유지 , 네이버지도 이동시 home이동 삭제 , 로그인 되어있지 않은 상태 로그아웃 버튼 유무 수정, OG 수정)

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
   "start_url": "/",
   "name": "nnzz",
   "short_name": "nnzz",
-  "description": "맛있는 솔루션",
+  "description": "냠냠쩝쩝에서 직장인들의 점심, 저녁 메뉴 고민을 함께 해결해드려요!",
   "orientation": "portrait",
   "icons": [
     {
