--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -22,7 +22,7 @@
     "html2canvas": "^1.4.1",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.552.0",
-    "next": "^15.4.10",
+    "next": "16.1.5",
     "next-pwa": "^5.6.0",
     "notion-client": "^7.7.1",
     "notion-types": "^7.7.1",
